# Router

./: .aiignore  Claude.md  README.md  pyproject.toml
src/: config.py  main.py
src/models/: llm.py  schemas.py
src/router/: __init__.py  classifier.py  handlers.py  system_prompt.py
src/services/: llm.py
